--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,8 @@
     ></script>
   </head>
   <body>
-    <h1>CALCULADORA</h1>
+    
+  <h1 class="text-center">CALCULADORA</h1>
     <div class="container mt-4">
       <div class="row g-1 col-2 mb-2 mx-auto">
         <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">7</button></div>
