--- a/Index.html
+++ b/Index.html
@@ -17,32 +17,32 @@
     ></script>
   </head>
   <body>
-    
+
   <h1 class="text-center">CALCULADORA</h1>
     <div class="container mt-4">
       <div class="row g-1 col-2 mb-2 mx-auto">
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">7</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">8</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">9</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">/</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="7" value="7">7</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="8" value="8">8</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="9" value="9">9</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="Division" onclick="Division()">/</button></div>
       </div>
       <div class="row g-1 col-2 mb-2 mx-auto">
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">4</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">5</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">6</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">*</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="4" value="4">4</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="5" value="5">5</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="6" value="6">6</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="Multiplicacion" onclick="Multiplicacion()">*</button></div>
       </div>
       <div class="row g-1 col-2 mb-2 mx-auto">
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">1</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">2</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">3</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">-</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="1" value="1">1</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="2" value="2">2</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="3" value="3">3</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="Resta" onclick="Resta()">-</button></div>
       </div>
       <div class="row g-1 col-2 mb-2 mx-auto">
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">0</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">.</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">=</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100">+</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="0" value="0">0</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="punto">.</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="Igual" onclick="Operacion()">=</button></div>
+        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="Suma" onclick="suma()">+</button></div>
       </div>
     </div>
   </body>
