--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,8 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
+    <link rel="import" href="main.js">
+    <link rel="icon" type="image/png" href="/src/ghost.png">
   </head>
   <body>
 
