--- a/Index.html
+++ b/Index.html
@@ -15,36 +15,202 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-    <link rel="import" href="main.js">
-    <link rel="icon" type="image/png" href="/src/ghost.png">
+    <script src="/main.js"></script>
+    <link rel="icon" type="image/png" href="/src/ghost.png" />
   </head>
   <body>
-
-  <h1 class="text-center">CALCULADORA</h1>
+    <h1 class="text-center">CALCULADORA</h1>
     <div class="container mt-4">
-      <div class="row g-1 col-2 mb-2 mx-auto">
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="7" value="7">7</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="8" value="8">8</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="9" value="9">9</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="Division" onclick="Division()">/</button></div>
+      <div
+        class="input-group input-group-lg col-6 mb-4 mx-auto"
+        style="max-width: 420px"
+      >
+       
+        <input
+          id="display"
+          disabled
+          type="text"
+          class="form-control text-center"
+          aria-label="Sizing example input"
+          aria-describedby="inputGroup-sizing-small"
+        />
       </div>
       <div class="row g-1 col-2 mb-2 mx-auto">
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="4" value="4">4</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="5" value="5">5</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="6" value="6">6</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="Multiplicacion" onclick="Multiplicacion()">*</button></div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="num"
+            value="7"
+            onclick="NumeroPresente('7')"
+          >
+            7
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="num"
+            value="8"
+            onclick="NumeroPresente('8')"
+          >
+            8
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="num"
+            value="9"
+            onclick="NumeroPresente('9')"
+          >
+            9
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="Division"
+            onclick="OperadorFun('/')"
+          >
+            /
+          </button>
+        </div>
       </div>
       <div class="row g-1 col-2 mb-2 mx-auto">
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="1" value="1">1</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="2" value="2">2</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="3" value="3">3</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="Resta" onclick="Resta()">-</button></div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="num"
+            value="4"
+            onclick="NumeroPresente('4')"
+          >
+            4
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="num"
+            value="5"
+            onclick="NumeroPresente('5')"
+          >
+            5
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="num"
+            value="6"
+            onclick="NumeroPresente('6')"
+          >
+            6
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="Multiplicacion"
+            onclick="OperadorFun('*')"
+          >
+            *
+          </button>
+        </div>
       </div>
       <div class="row g-1 col-2 mb-2 mx-auto">
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="0" value="0">0</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="punto">.</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="Igual" onclick="Operacion()">=</button></div>
-        <div class="col-3"><button type="button" class="btn btn-outline-primary w-100" id="Suma" onclick="suma()">+</button></div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="num"
+            value="1"
+            onclick="NumeroPresente('1')"
+          >
+            1
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="num"
+            value="2"
+            onclick="NumeroPresente('2')"
+          >
+            2
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="num"
+            value="3"
+            onclick="NumeroPresente('3')"
+          >
+            3
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="Resta"
+            onclick="OperadorFun('-')"
+          >
+            -
+          </button>
+        </div>
+      </div>
+      <div class="row g-1 col-2 mb-2 mx-auto">
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="num"
+            value="0"
+            onclick="NumeroPresente('0')"
+          >
+            0
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="punto"
+          >
+            .
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="Igual"
+            onclick="Operacion()"
+          >
+            =
+          </button>
+        </div>
+        <div class="col-3">
+          <button
+            type="button"
+            class="btn btn-outline-primary w-100"
+            id="Suma"
+            onclick="OperadorFun('+')"
+          >
+            +
+          </button>
+        </div>
       </div>
     </div>
   </body>
